--- a/platformio.ini
+++ b/platformio.ini
@@ -22,7 +22,7 @@ upload_port = /dev/cu.SLAB_USBtoUART
 board_f_cpu = 80000000L
 ; FLASH MODE changed to dio mode to allow
 ;recoup of GPIO9 and GPIO10 back as general ports!!
-board_flash_mode = dio
+board_flash_mode = qio
 ;build_flags = -Wl,-Teagle.flash.4m.ld
 ; Custom Serial Monitor port
 monitor_port =  /dev/cu.SLAB_USBtoUART
