--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,8 @@
 [env:nodemcuv2]
 ;platform = https://github.com/platformio/platform-espressif8266.git#feature/2.4.0-rc2
 platform = espressif8266
-board = nodemcuv2
+;board = nodemcuv2
+board = esp8285
 framework = arduino
 upload_speed = 921600
 upload_resetmethod = nodemcu
