--- a/platformio.ini
+++ b/platformio.ini
@@ -13,8 +13,7 @@
 [env:nodemcuv2]
 ;platform = https://github.com/platformio/platform-espressif8266.git#feature/2.4.0-rc2
 platform = espressif8266
-;board = nodemcuv2
-board = esp8285
+board = nodemcuv2
 framework = arduino
 upload_speed = 921600
 upload_resetmethod = nodemcu
@@ -27,7 +26,7 @@ board_f_cpu = 80000000L
 ;board_f_cpu = 160000000L
 ; FLASH MODE changed to dio mode to allow
 ;recoup of GPIO9 and GPIO10 back as general ports!!
-board_flash_mode = dout
+board_flash_mode = dio
 ;build_flags = -Wl,-Teagle.flash.4m.ld
 ; Custom Serial Monitor port
 monitor_port =  /dev/cu.SLAB_USBtoUART
