--- a/platformio.ini
+++ b/platformio.ini
@@ -18,8 +18,8 @@ framework = arduino
 upload_speed = 921600
 upload_resetmethod = nodemcu
 ;upload_flags = --spiffs
-upload_port = 10.0.0.5
-;upload_port = /dev/cu.SLAB_USBtoUART
+;upload_port = 10.0.0.5
+upload_port = /dev/cu.SLAB_USBtoUART
 ;upload_port =/dev/cu.wchusbserial141340
 ; set frequency to 160MHz
 board_f_cpu = 80000000L
