--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 .vscode/.browse.c_cpp.db-shm
 .vscode/.browse.c_cpp.db-wal
 .vscode/.browse.c_cpp.db-wal
+.vscode/.browse.c_cpp.db-wal
+.vscode/.browse.c_cpp.db-shm
