changes to add sensor or controller version

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,8 @@ framework = arduino
 upload_speed = 921600
 upload_resetmethod = nodemcu
 ;upload_flags = --spiffs
-upload_port = 10.0.0.180
+;upload_port = 10.0.0.180
+upload_port = /dev/cu.usbserial
 ;upload_port = /dev/cu.SLAB_USBtoUART
 ;upload_port =/dev/cu.wchusbserial141340
 ; set frequency to 160MHz
@@ -28,10 +29,6 @@ board_f_cpu = 80000000L
 ;recoup of GPIO9 and GPIO10 back as general ports!!
 board_flash_mode = dio
 ;build_flags = -Wl,-Teagle.flash.4m.ld
-; Custom Serial Monitor port
-;monitor_port =  /dev/cu.SLAB_USBtoUART
-; Custom Serial Monitor baud rate
-;monitor_baud = 115200
 lib_deps = TFT_eSPI, TaskScheduler, Arduino, ESP8266WiFi, ESP8266mDNS, ArduinoOTA
 lib_deps = WiFiUdp, Modbus, ModbusIP_ESP82666, ESP8266WebServer, DHT, EEPROM, Adafruit_MCP23017
 lib_deps = Wire, SPI, EspSaveCrash, Time, ESP8266FtpServer, RemoteDebug, Adafruit Unified Sensor
